# Biquads

./: .clang-format  .editorconfig  .eslintignore  .eslintrc.json  .gitattributes  .gitignore  .gitmodules  .vercelignore  404.html  Biquads.jucer  Biquads.vst3  CMakeLists.txt  CMakePresets.json  CNAME  Doxyfile  FUNDING.yml  README.md  VERSION  annotated.html  biquads.stoneydsp.webmanifest  classes.html  clean.sh  dir_7ad8d40a137ae27b66f323d26b1167b9.html  dir_c2d647eca8dcc9a209da42392116700a.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_fa583830d049c19f1af96f729e9e0170.html  doxygen.css  files.html  functions.html  functions_b.html  functions_c.html  functions_d.html  functions_e.html  functions_f.html  functions_func.html  functions_g.html  functions_h.html  functions_i.html  functions_k.html  functions_l.html  (+34 more)
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md
.github/ISSUE_TEMPLATE/: 1.Bug_report.md  config.yml
.github/workflows/: macos-arm-latest.yaml  macos-latest.yaml  ubuntu-latest.yaml  windows-latest.yaml
Docs/: CMake.md
JuceLibraryCode/: AppConfig.h  JuceHeader.h  JucePluginDefines.h  include_stoneydsp_audio.cpp  include_stoneydsp_audio.mm  include_stoneydsp_core.cpp  include_stoneydsp_core.mm
Modules/: CMakeLists.txt
Modules/stoneydsp_audio/: stoneydsp_audio.h
Modules/stoneydsp_core/: stoneydsp_core.cpp
Res/Templates/: Calculations.h  Transforms.cpp
Source/: Biquads.cpp  Biquads.h  CMakeLists.txt  Calculations.cpp  Calculations.h  Coefficients.cpp  Coefficients.h  PluginEditor.cpp  PluginEditor.h  PluginParameters.cpp  PluginParameters.h  PluginProcessor.cpp  PluginProcessor.h  PluginWrapper.cpp  PluginWrapper.h  ProcessorWrapper.cpp  ProcessorWrapper.h  Transforms.cpp  Transforms.h
Source/Components/: AutoButton.cpp  AutoButton.h  AutoComboBox.cpp  AutoComboBox.h  AutoComponent.cpp  AutoComponent.h  AutoKnob.cpp  AutoKnob.h  Viewer.cpp  Viewer.h
Source/Modules/: Biquads.cpp  Biquads.h  Coeff.h  Coefficient.cpp  Coefficient.h  SecondOrderBiquads.cpp  SecondOrderBiquads.h  Transforms.cpp  Transforms.h
Sources/: Biquads.cpp  Biquads.hpp  Editor.cpp  Editor.hpp  Parameters.hpp  Processor.cpp  Processor.hpp  Processor.mm  Wrapper.cpp  Wrapper.hpp
Sources/Editor/: Editor.cpp  Editor.hpp  Editor.mm
Sources/Parameters/: Parameters.cpp  Parameters.hpp  Parameters.mm
Sources/Processor/: Processor.cpp  Processor.hpp
Sources/Wrapper/: Wrapper.cpp  Wrapper.hpp  Wrapper.mm
Testing/: CMakeLists.txt  StoneyDSPBiquadsCTestConfig.cmake
api/: cache-control-headers.js  darkmode_toggle.js  dynsections.js  jquery.js  menu.js  menudata.d.ts  menudata.js  vitals.js
api/search/: searchdata.js
assets/css/: styles.css
d0/d1a/: class_auto_combo_box-members.html
d0/d30/: class_viewer.html
d0/d3b/: _auto_combo_box_8h.html  _auto_combo_box_8h_source.html
d0/d45/: class_biquads_audio_processor_editor-members.html
d0/d8e/: _plugin_editor_8h.html  _plugin_editor_8h_source.html
d1/d0f/: _biquads_8h.html  _biquads_8h_source.html
d1/d78/: _auto_component_8cpp.html  _auto_component_8cpp_source.html
d1/dfb/: struct_knob_with_attachment.html
d2/d00/: struct_slider_with_attachment-members.html
d2/d50/: class_auto_button_look_and_feel.html
d2/d63/: class_auto_combo_box_look_and_feel-members.html
d2/dc7/: _plugin_wrapper_8h.html  _plugin_wrapper_8h_source.html
d2/dfa/: class_auto_knob_look_and_feel.html
d2/dff/: _auto_button_8cpp.html  _auto_button_8cpp_source.html
d3/d60/: class_auto_component_look_and_feel-members.html
d3/dc5/: class_auto_knob-members.html
d3/dd6/: _viewer_8cpp.html  _viewer_8cpp_source.html
d3/df3/: class_viewer-members.html
d3/dff/: _auto_combo_box_8cpp.html  _auto_combo_box_8cpp_source.html
d4/d24/: class_process_wrapper-members.html
d4/d4b/: _plugin_editor_8cpp.html  _plugin_editor_8cpp_source.html
d5/d1c/: _plugin_wrapper_8cpp.html  _plugin_wrapper_8cpp_source.html
d5/d9c/: class_auto_component.html
d5/dc1/: class_auto_button.html
d6/d12/: _auto_button_8h.html  _auto_button_8h_source.html
d6/d40/: _auto_knob_8h.html  _auto_knob_8h_source.html
d6/d56/: class_auto_component_look_and_feel.html
d6/d6d/: class_coefficient.html
d6/dcb/: class_auto_knob.html
d6/dea/: _auto_knob_8cpp.html  _auto_knob_8cpp_source.html
d7/d0d/: namespaceanonymous__namespace_02_viewer_8cpp_03.html
d7/d4b/: _plugin_parameters_8cpp.html  _plugin_parameters_8cpp_source.html
d7/d68/: _viewer_8h.html  _viewer_8h_source.html
d7/dee/: class_parameters-members.html
d8/d43/: class_process_wrapper.html
d8/d97/: class_biquads_audio_processor.html
d8/dba/: class_biquads_audio_processor-members.html
d8/dda/: struct_button_with_attachment-members.html
d8/df5/: class_auto_knob_look_and_feel-members.html
d9/d56/: class_auto_button-members.html
d9/d69/: class_biquads_audio_processor_editor.html
d9/dd6/: _r_e_a_d_m_e_8md.html  (+1 more)
docs/: dir_7ad8d40a137ae27b66f323d26b1167b9.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_fa583830d049c19f1af96f729e9e0170.html  doxygen.css  files.html  functions.html  functions_b.html  functions_c.html  functions_func.html  functions_i.html  functions_s.html  functions_t.html  functions_u.html  functions_x.html  functions_y.html  functions_~.html  globals.html  globals_func.html  globals_type.html  hierarchy.html  index.html  menudata.js  namespacemembers.html  namespaces.html
modules/: CMakeLists.txt
search/: all_1.js  all_11.js  all_12.js  all_13.js  all_15.js  all_7.js  all_a.js  all_d.js  classes_0.js  classes_4.js  classes_5.js  defines_0.js  enums_1.js  enumvalues_0.js  enumvalues_1.js  enumvalues_4.js  enumvalues_6.js  files_0.js  functions_2.js  functions_3.js  functions_5.js  functions_9.js  functions_c.js  functions_d.js  functions_e.js  namespaces_0.js  typedefs_3.js  typedefs_4.js  typedefs_7.js  variables_12.js  variables_13.js  variables_14.js  variables_15.js  variables_16.js  variables_2.js  variables_7.js  variables_8.js  variables_b.js  variables_d.js  variables_e.js
tests/: CMakeLists.txt  StoneyDSPBiquadsCTestConfig.cmake  pluginval.cmake
(+276 files in other folders)
